# GC-Stats — RiotRelay crate manifest
#
# Dependencies of the Riot match caching relay (axum, reqwest, sqlx/MariaDB).
#
# Copyright (c) 2026 Alice Alleman — GC-Stats-RiotRelay
# License: https://github.com/GC-Stats/RiotRelay/blob/main/LICENSE.md (GC-Stats License v1.0)
# Repository: https://github.com/GC-Stats/RiotRelay

[package]
name = "riot_relay"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8"
dotenvy = "0.15"
serde_json = "1"
subtle = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "mysql"] }
